#################################################################
# Parallel drivers
#################################################################

IF(MPI_FOUND)

    IF(${PROJECT_NAME}_USER)

        FILE(GLOB DRIVERS_PAR_SRC ${PAR_DRIVERS_PATH}/${${PROJECT_NAME}_USER}/*.f90 ${PAR_DRIVERS_PATH}/${${PROJECT_NAME}_USER}/*.F90)
        SET(DRIVERS_PAR_SRC ${DRIVERS_PAR_SRC} PARENT_SCOPE)

        FOREACH(DRIVER_SRC ${DRIVERS_PAR_SRC})
            GET_FILENAME_COMPONENT(EXE_NAME ${DRIVER_SRC} NAME_WE)
            UNSET(${EXE_NAME}_MODULES_SRC CACHE)
            SET(${EXE_NAME}_MODULES_DIR ${PAR_DRIVERS_PATH}/${${PROJECT_NAME}_USER}/${EXE_NAME})
            IF(EXISTS "${${EXE_NAME}_MODULES_DIR}" AND IS_DIRECTORY "${${EXE_NAME}_MODULES_DIR}")
                FILE(GLOB ${EXE_NAME}_MODULES_SRC ${${EXE_NAME}_MODULES_DIR}/*.f90 ${${EXE_NAME}_MODULES_DIR}/*.F90)
            ENDIF()
            ADD_EXECUTABLE(${EXE_NAME} ${DRIVER_SRC} ${${EXE_NAME}_MODULES_SRC})
            TARGET_LINK_LIBRARIES(${EXE_NAME} ${PROJECT_NAME})
            TARGET_LINK_LIBRARIES(${EXE_NAME} ${MPI_Fortran_LIBRARIES})
            TARGET_LINK_LIBRARIES(${EXE_NAME} ${EXT_PROJ_LIBS})
            FOREACH (EXT_LIB ${EXT_LIBS})
                IF(DEFINED ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${EXT_LIB}_FOUND)
                    TARGET_LINK_LIBRARIES(${EXE_NAME} ${${EXT_LIB}_LIBRARIES})
                ENDIF()
            ENDFOREACH()
        ENDFOREACH()

    ENDIF()

ENDIF()
