
#################################################################
# Serial tests
#################################################################

FILE(GLOB_RECURSE TESTS_FEM_SRC *.f90 *.F90)
SET(TESTS_FEM_SRC ${TESTS_FEM_SRC} PARENT_SCOPE)

FOREACH(TEST_SRC ${TESTS_FEM_SRC})
    GET_FILENAME_COMPONENT(EXE_NAME ${TEST_SRC} NAME_WE)
    ADD_EXECUTABLE(${EXE_NAME} ${TEST_SRC})
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${FEM_LIB})
    TARGET_LINK_LIBRARIES(${EXE_NAME} ${PROB_LIB})
#    TARGET_LINK_LIBRARIES(${EXE_NAME} ${PAR_LIB})
    FOREACH (EXT_LIB ${EXT_LIBS})
        IF(DEFINED ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${EXT_LIB}_FOUND)
            TARGET_LINK_LIBRARIES(${EXE_NAME} ${${EXT_LIB}_LIBRARIES})
#            GET_FILENAME_COMPONENT(LIB_PATH ${${EXT_LIB}_LIBRARIES} DIRECTORY)
#            MESSAGE("LIB_PATH: ${LIB_PATH}")
#            LINK_DIRECTORIES(${LIB_PATH})
        ENDIF()
    ENDFOREACH()
    ADD_TEST(${EXE_NAME}_TEST 
             ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME} ${CMAKE_SOURCE_DIR}/Sources/Tests/Data/${EXE_NAME}.txt)
ENDFOREACH()



