#################################################################
# Serial tests
#################################################################

IF(MPI_FOUND)

    FILE(GLOB_RECURSE TESTS_SERIAL_SRC *.f90 *.F90)
    SET(TESTS_SERIAL_SRC ${TESTS_SERIAL_SRC} PARENT_SCOPE)

    FOREACH(TEST_SRC ${TESTS_SERIAL_SRC})
        GET_FILENAME_COMPONENT(EXE_NAME ${TEST_SRC} NAME_WE)
        ADD_EXECUTABLE(${EXE_NAME} ${TEST_SRC})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${PROJECT_NAME})
        TARGET_LINK_LIBRARIES(${EXE_NAME} ${MPI_Fortran_LIBRARIES})
        FOREACH (EXT_LIB ${EXT_LIBS})
            IF(DEFINED ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${PROJECT_NAME}_ENABLE_${EXT_LIB} AND ${EXT_LIB}_FOUND)
                TARGET_LINK_LIBRARIES(${EXE_NAME} ${${EXT_LIB}_LIBRARIES})
            ENDIF()
        ENDFOREACH()
        FOREACH(SISL_LIBRARY ${SISL_LIBS})
            TARGET_LINK_LIBRARIES(${EXE_NAME} ${SISL_LIBRARY})
        ENDFOREACH()
        IF(EXISTS ${SCRIPTS_TESTS_PATH}/${EXE_NAME})
            ADD_TEST(${EXE_NAME}_TEST ${SCRIPTS_TESTS_PATH}/${EXE_NAME} ${EXECUTABLE_OUTPUT_PATH}/${EXE_NAME} ${DATA_TESTS_PATH}/${EXE_NAME})
        ENDIF()
    ENDFOREACH()

ENDIF()



